[package]
name = "pub_iec"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet = "0.35.0"
crc32fast = "1.4.2"
chrono = "0.4.38"
log = "0.4.21"
env_logger = "0.11.3"

[profile.release]
opt-level = 2     # Optimization level (0-3, s, z)
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units for better optimizations
panic = 'abort'   # Optimize panic strategy
