[package]
name = "sub_with_fsm_iec"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pnet = "0.35.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4.2"

[profile.release]
opt-level = 2     # Optimization level (0-3, s, z)
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce codegen units for better optimizations
panic = 'abort'   # Optimize panic strategy
